--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "use-debounce": "^10.1.0",
     "web-push": "^3.6.7",
     "zod": "^4.3.6"
   },
