--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "normalize-phones": "node normalize-phones.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -40,7 +41,8 @@
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.1.0",
     "web-push": "^3.6.7",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
